...
    <string name="cancel">Cancel</string>

    <!-- Fragment titles -->
    <string name="account_add_title">Add Account</string>
    <string name="account_edit_title">Edit Account</string>
    <string name="account_overview_title">Home</string>
    <string name="expense_add_title">Add Expense</string>
    <string name="expense_edit_title">Edit Expense</string>
    <string name="expense_overview_title">Expense Overview</string>
    <string name="template_add_title">Add Template</string>
    <string name="template_edit_title">Edit Template</string>
    <string name="template_overview_title">Template Overview</string>

    <!-- Menu items -->
    <string name="add_account">Add Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="account_overview">Home</string>
    <string name="view_map">Map</string>
    <string name="view_report">Reports</string>

    <!-- Template -->
    <string name="template_delete">Delete</string>
    <string name="template_overview">Templates</string>

    <!-- Add Account Items -->
    <string name="account_name">Name</string>
    <string name="account_type">Type</string>
    <string name="account_initbalance">Initial Balance</string>
    <string name="account_currency">Currency</string>
    <string name="account_delete">Delete</string>
    <string name="accounts">Accounts</string>
    <string-array name="account_types">
...

    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string name="add_expense">Add Expense</string>
    <string name="add_template">Add Template</string>

    <!-- Add Expense Items -->
    <string name="expense_name">Name</string>
    <string name="expense_category">Category</string>
    <string name="expense_account">Account</string>
...
