<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_expense_overview"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:entries="@array/expense_filter_array"
        android:id="@+id/expense_filter_spinner"
        android:layout_alignParentTop="true">
    </android.support.v7.widget.AppCompatSpinner>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id = "@+id/account_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/expense_filter_spinner">
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id = "@+id/expanse_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TableLayout>
    </ScrollView>




    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_expense"
        android:src="@drawable/ic_add_white_48dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
