<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="ifRoom" />
</menu>