...
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_save_back"
...
